@@ -1,3 +1,11 @@
+2014-10-23  Albert Graef  <aggraef@gmail.com>
+
+	* interpreter.cc (compiler): As proposed by Alastair Pharo, use
+	some linker magic in the batch compiler in order to locate
+	imported libraries which can't be found by their name or under the
+	Pure library path. Cf. ticket #30:
+	https://bitbucket.org/purelang/pure-lang/issue/30
+
 2014-10-22  Albert Graef  <aggraef@gmail.com>
 
 	* 0.63 release.
